--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,5 +35,10 @@ jobs:
         run: python --version
       - name: docker version
         run: docker -v
-      - name: terraform version
+     steps:
+      - uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Version
         run: terraform --version
