--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,4 +35,6 @@ jobs:
         run: python --version
       - name: docker version
         run: docker -v
+      - name: terraform version
+        run: terraform --version
       
