--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,8 @@ jobs:
         run: python --version
       - name: docker version
         run: docker -v
+      - name: setup terraform
+        uses: hashicorp/setup-terraform@v3
       - name: terraform version
         run: terraform --version
       
